@@ -58,6 +58,21 @@ class FC6_UserData(BaseData):
 
         return retval + "\n"
 
+class F8_UserData(FC6_UserData):
+    def __init__(self, groups=None, homedir="", isCrypted=False, name="",
+                 password="", shell="", uid=None, lock=False):
+        FC6_UserData.__init__(self, groups, homedir, isCrypted, name, password,
+                              shell, uid)
+        self.lock = lock
+
+    def __str__(self):
+        retval = FC6_UserData.__str__(self)
+
+        if self.lock:
+            return retval.strip() + " --lock\n"
+        else:
+            return retval
+
 class FC6_User(KickstartCommand):
     def __init__(self, writePriority=0, userList=None):
         KickstartCommand.__init__(self, writePriority)
@@ -97,3 +112,27 @@ class FC6_User(KickstartCommand):
 
     def add(self, newObj):
         self.userList.append(newObj)
+
+class F8_User(FC6_User):
+    def parse(self, args):
+        def groups_cb (option, opt_str, value, parser):
+            for d in value.split(','):
+                parser.values.ensure_value(option.dest, []).append(d)
+
+        op = KSOptionParser(lineno=self.lineno)
+        op.add_option("--groups", dest="groups", action="callback",
+                      callback=groups_cb, nargs=1, type="string")
+        op.add_option("--homedir")
+        op.add_option("--iscrypted", dest="isCrypted", action="store_true",
+                      default=False)
+        op.add_option("--plaintext", dest="isCrypted", action="store_false")
+        op.add_option("--name", required=1)
+        op.add_option("--password")
+        op.add_option("--shell")
+        op.add_option("--uid", type="int")
+        op.add_option("--lock", action="store_true", default=False)
+
+        ud = F8_UserData()
+        (opts, extra) = op.parse_args(args=args)
+        self._setToObj(op, opts, ud)
+        self.add(ud)
