@@ -326,7 +326,7 @@ commandMap = {
         "raid": raid.F7_Raid,
         "reboot": reboot.FC6_Reboot,
         "repo": repo.FC6_Repo,
-        "rootpw": rootpw.FC3_RootPw,
+        "rootpw": rootpw.F8_RootPw,
         "selinux": selinux.FC3_SELinux,
         "services": services.FC6_Services,
         "shutdown": reboot.FC6_Reboot,
@@ -336,7 +336,7 @@ commandMap = {
         "updates": updates.F7_Updates,
         "upgrade": upgrade.FC3_Upgrade,
         "url": method.FC6_Method,
-        "user": user.FC6_User,
+        "user": user.F8_User,
         "vnc": vnc.FC6_Vnc,
         "volgroup": volgroup.FC3_VolGroup,
         "xconfig": xconfig.FC6_XConfig,
@@ -558,6 +558,19 @@ dataMap = {
         "RaidData": raid.F7_RaidData,
         "RepoData": repo.FC6_RepoData,
         "UserData": user.FC6_UserData,
+        "VolGroupData": volgroup.FC3_VolGroupData,
+        "ZFCPData": zfcp.FC3_ZFCPData,
+    },
+    F8: {
+        "DmRaidData": dmraid.FC6_DmRaidData,
+        "IscsiData": iscsi.FC6_IscsiData,
+        "LogVolData": logvol.FC4_LogVolData,
+        "MultiPathData": multipath.FC6_MultiPathData,
+        "NetworkData": network.FC6_NetworkData,
+        "PartData": partition.FC4_PartData,
+        "RaidData": raid.F7_RaidData,
+        "RepoData": repo.FC6_RepoData,
+        "UserData": user.F8_UserData,
         "VolGroupData": volgroup.FC3_VolGroupData,
         "ZFCPData": zfcp.FC3_ZFCPData,
     },
